# mtwRequest

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  mtw.toml.example
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bindings/node/: Cargo.toml
bindings/node/src/: lib.rs  ws.rs
bindings/php/: Cargo.toml
bindings/php/src/: lib.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/mtw-ai/: Cargo.toml
crates/mtw-ai/src/: agent.rs  chain.rs  executor.rs  feedback.rs  flow.rs  lib.rs  memory.rs  orchestrator.rs  provider.rs  reactive.rs  schedule.rs  trigger.rs
crates/mtw-ai/src/providers/: anthropic.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs
crates/mtw-auth/: Cargo.toml
crates/mtw-auth/src/: apikey.rs  jwt.rs  lib.rs  middleware.rs
crates/mtw-bridge/: Cargo.toml
crates/mtw-bridge/src/: lib.rs  protocol.rs  server.rs  unix.rs
crates/mtw-codec/: Cargo.toml
crates/mtw-codec/src/: json.rs  lib.rs
crates/mtw-comms/: Cargo.toml
crates/mtw-comms/src/: account.rs  campaign.rs  lib.rs  message.rs  service.rs  template.rs  types.rs
crates/mtw-core/: Cargo.toml
crates/mtw-core/src/: config.rs  error.rs  hooks.rs  lib.rs  module.rs  server.rs
crates/mtw-exchange/: Cargo.toml
crates/mtw-exchange/src/: config.rs  error.rs  lib.rs  manager.rs  module.rs  provider.rs  rate_limit.rs  types.rs
crates/mtw-exchange/src/providers/: mod.rs
crates/mtw-exchange/src/providers/bitvavo/: auth.rs  mod.rs  rest.rs  types.rs  ws.rs
crates/mtw-federation/: Cargo.toml
crates/mtw-federation/src/: changelog.rs  discovery.rs  lib.rs  peer.rs  sync.rs  types.rs
crates/mtw-graph/: Cargo.toml
crates/mtw-graph/src/: analytics.rs  client.rs  lib.rs  market.rs  memory.rs  types.rs
crates/mtw-http/: Cargo.toml
crates/mtw-http/src/: auth.rs  client.rs  lib.rs  paginator.rs  pipeline.rs  request.rs  response.rs
crates/mtw-http/src/stages/: auth_refresh.rs  cache.rs  circuit_breaker.rs  decompression.rs  headers.rs  json_parse.rs  logging.rs  metrics.rs  mod.rs  pagination.rs  rate_limit.rs  retry.rs  status_check.rs  stream.rs  timeout.rs  transform.rs  validate.rs
crates/mtw-integrations/: Cargo.toml
crates/mtw-integrations/src/: lib.rs  oauth2.rs  rss.rs
crates/mtw-integrations/src/ai/: anthropic.rs  cohere.rs  deepseek.rs  google.rs  huggingface.rs  lmstudio.rs  meta.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  xai.rs
crates/mtw-integrations/src/apis/: airtable.rs  aws_s3.rs  cloudflare.rs  discord.rs  docker_hub.rs  firebase.rs  gcs.rs  github.rs  gitlab.rs  jira.rs  linear.rs  mod.rs  notion.rs  paypal.rs  sendgrid.rs  slack.rs  stripe.rs  supabase.rs  telegram.rs  twilio.rs  vercel.rs
crates/mtw-mcp/: Cargo.toml
crates/mtw-mcp/src/: main.rs  protocol.rs  tools.rs
crates/mtw-notify/: Cargo.toml
crates/mtw-notify/src/: dashboard.rs  lib.rs  provider.rs  registry.rs
crates/mtw-orchestrator/: Cargo.toml
crates/mtw-orchestrator/src/: builtins.rs  callback.rs  command.rs  lib.rs  orchestrator.rs  types.rs
crates/mtw-protocol/: Cargo.toml
crates/mtw-protocol/src/: error.rs  frame.rs  lib.rs  message.rs
crates/mtw-registry/: Cargo.toml
crates/mtw-registry/src/: client.rs  lib.rs  manifest.rs  resolver.rs  sandbox.rs
crates/mtw-router/: Cargo.toml
crates/mtw-router/src/: channel.rs  lib.rs  middleware.rs  router.rs
crates/mtw-sdk/: Cargo.toml
crates/mtw-sdk/src/: builder.rs  lib.rs  prelude.rs  testing.rs
crates/mtw-security/: Cargo.toml
crates/mtw-security/src/: approval.rs  events.rs  lib.rs  pairing.rs  policy.rs  rate_limit.rs
crates/mtw-server/: Cargo.toml
crates/mtw-server/src/: main.rs  rust_services.rs
crates/mtw-skills/: Cargo.toml
crates/mtw-skills/src/: lib.rs  marketplace.rs  registry.rs  skill.rs  tool.rs  types.rs
crates/mtw-state/: Cargo.toml
crates/mtw-state/src/: lib.rs  memory.rs  redis.rs
crates/mtw-store/: Cargo.toml
crates/mtw-store/src/: lib.rs  sqlite.rs
crates/mtw-test/: Cargo.toml
crates/mtw-test/src/: assertions.rs  harness.rs  lib.rs  mock_client.rs  mock_transport.rs
crates/mtw-trading/: Cargo.toml
crates/mtw-trading/src/: formula.rs  lib.rs  module.rs  monitor.rs  signal.rs  types.rs
crates/mtw-trading/src/formulas/: adx.rs  aroon.rs  atr_channel.rs  bollinger.rs  cci.rs  chaikin_mf.rs  choppiness.rs  donchian.rs  elder_ray.rs  ema_crossover.rs  ensemble.rs  fibonacci.rs  ichimoku.rs  kelly.rs  keltner.rs  linear_regression.rs  macd.rs  mfi.rs  mod.rs  obv.rs  parabolic_sar.rs  pivot_points.rs  regime.rs  rsi.rs  squeeze.rs  stochastic.rs  stochastic_rsi.rs  supertrend.rs  vwap.rs  vwma_trend.rs  williams_r.rs
crates/mtw-transport/: Cargo.toml
crates/mtw-transport/src/: lib.rs  ws.rs
docs/: README.md  ai-agents-guide.md  api-reference.md  auth-guide.md  bindings-guide.md  channels-guide.md  frontend-guide.md  getting-started.md  http-pipeline-guide.md  integrations-guide.md  modules-guide.md  protocol-guide.md  server-guide.md
examples/: Cargo.toml  demo_client.rs  demo_server.rs
scripts/: create-app.sh
