[package]
name = "mtw-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mtw-core = { path = "../crates/mtw-core" }
mtw-protocol = { path = "../crates/mtw-protocol" }
mtw-transport = { path = "../crates/mtw-transport" }
mtw-router = { path = "../crates/mtw-router" }
mtw-codec = { path = "../crates/mtw-codec" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "demo-server"
path = "demo_server.rs"

[[bin]]
name = "demo-client"
path = "demo_client.rs"
