[package]
name = "mtw-binding-php"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fastslack"]
description = "C FFI bindings for mtwRequest — PHP extension via FFI"
repository = "https://github.com/fastslack/mtwRequest"

[lib]
crate-type = ["cdylib"]

[dependencies]
mtw-protocol = { path = "../../crates/mtw-protocol" }
mtw-core = { path = "../../crates/mtw-core" }
mtw-transport = { path = "../../crates/mtw-transport" }
mtw-router = { path = "../../crates/mtw-router" }
mtw-ai = { path = "../../crates/mtw-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
