[package]
name = "mtw-ai"
description = "AI engine: agents, providers, streaming, and tool calling for mtwRequest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-protocol = { workspace = true }
mtw-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
ulid = { workspace = true }
