[package]
name = "mtw-auth"
description = "Authentication and authorization for mtwRequest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-protocol = { workspace = true }
mtw-core = { workspace = true }
mtw-router = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
ulid = { workspace = true }
jsonwebtoken = { workspace = true }
