[package]
name = "mtw-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "mtwRequest bridge — delegate operations to external services via Unix socket or TCP"

[dependencies]
mtw-core = { workspace = true }
mtw-protocol = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# Utilities
tracing = { workspace = true }
ulid = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
