[package]
name = "mtw-codec"
description = "Codec system for mtwRequest (JSON, MessagePack, binary)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-protocol = { workspace = true }
mtw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
