[package]
name = "mtw-core"
description = "Core module system and server for mtwRequest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-protocol = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
