[package]
name = "mtw-sdk"
description = "SDK for mtwRequest module developers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-core = { workspace = true }
mtw-protocol = { workspace = true }
mtw-router = { workspace = true }
mtw-codec = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
