[package]
name = "mtw-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dynamic skill and plugin system for mtwRequest"

[dependencies]
mtw-core = { workspace = true }
mtw-protocol = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
ulid = { workspace = true }
