[package]
name = "mtw-state"
description = "State management for mtwRequest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
