[package]
name = "mtw-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "mtwRequest data store — native SQLite access with connection pooling"

[dependencies]
mtw-core = { workspace = true }
mtw-protocol = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SQLite
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Utilities
tracing = { workspace = true }
dashmap = { workspace = true }
seahash = { workspace = true }
toml = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
