[package]
name = "mtw-test"
description = "Testing harness for mtwRequest module developers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-core = { workspace = true }
mtw-protocol = { workspace = true }
mtw-transport = { workspace = true }
mtw-codec = { workspace = true }
mtw-router = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
