[package]
name = "mtw-transport"
description = "Transport layer for mtwRequest (WebSocket, HTTP, SSE)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mtw-protocol = { workspace = true }
mtw-core = { workspace = true }
mtw-codec = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
ulid = { workspace = true }
